GNOME Bugzilla – Bug 722496
GtkFileChooser: fix documentation
Last modified: 2014-01-19 14:03:43 UTC
For GTK 2.24, build broken if gtk-docs are enabled.
Created attachment 266612 [details] [review] GtkFileChooser: fix documentation
Review of attachment 266612 [details] [review]: sure, thanks
Attachment 266612 [details] pushed as b7c6954 - GtkFileChooser: fix documentation