GtkFileChooser: fix documentation

https://bugzilla.gnome.org/show_bug.cgi?id=722496